--- a/Webinterface/soft-ui-dashboard-main/assets/css/soft-ui-dashboard.css
+++ b/Webinterface/soft-ui-dashboard-main/assets/css/soft-ui-dashboard.css
@@ -80,7 +80,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  margin-top: 0;
+  margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   font-weight: 400;
   line-height: 1.2;
@@ -90,6 +90,11 @@ h6,
 h1,
 .h1 {
   font-size: calc(1.425rem + 2.1vw);
+  color: #643584;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 @media (min-width: 1200px) {
